[package]
name = "dive-rs"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.8", features = ["blocking"] }
httpmock = "0.5.2"
url = "2.2.0"
tar = "0.4.30"
flate2 = "1.0.19"
